# catalyst_atlas

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: v0.3_learn_catalytic_language.md  v0.4_rigor_and_scale.md  v0.5_expanded_learned.md
reports/: design_case_study.md  design_case_study_summary.json  hero_convergent_chemistry.md  hero_cryptic_chemistry.md  mcsa_n200_results.md  mcsa_n959_results.md  mcsa_v02_n959_results.md  v04_reeval_summary.json  v05_ablation_summary.json  v05_seed_summary.json
reports/case_studies/: README.md  case_1_same_fold__different_chemistry.md  case_2_different_fold__same_chemistry.md  case_3_cofactor_aware_chemistry_hypothesis.md  summary.json
scripts/: design_af_watchdog.py  embed_esm.py  reproduce.sh  run_colabfold_queue.py  run_proteinmpnn_panel.py  runpod_design_funnel.sh  runpod_train.sh  v05_ablation_run.py  v05_parallel_bakeoff.py  v05_seed_bakeoff.py
src/catalyst_atlas/: __init__.py  case_studies.py  cli.py  paths.py  search.py
src/catalyst_atlas/data/: __init__.py  cluster.py  cofactors.py  download.py  enrich.py  generate_demo.py  labels.py  mcsa.py  ontology.py  structures.py  uniprot_expand.py
src/catalyst_atlas/design/: __init__.py  af_geometry.py  findings.py  funnel.py  generate.py  md_deepdive.py  mpnn.py  panel.py  pocket.py  predict.py  report.py  score.py
src/catalyst_atlas/eval/: __init__.py  baselines.py  diagnostics.py  external_baselines.py  labels.py  metrics.py  run.py  splits.py
src/catalyst_atlas/explain/: __init__.py  cards.py
src/catalyst_atlas/featurize/: __init__.py  features.py  graphs.py
src/catalyst_atlas/models/: __init__.py  device.py  embed.py  esm_embed.py  graph_encoder.py  pairs.py  train_encoder.py
src/catalyst_atlas/resources/: chemistry_ontology.yaml
src/catalyst_atlas/site/: __init__.py  extract.py
tests/: conftest.py  test_annotation_controls.py  test_design.py  test_diagnostics.py  test_encoder.py  test_external_baselines.py  test_graphs.py  test_mcsa_structures.py  test_ontology.py  test_optional_embeddings.py  test_pipeline.py  test_random_graphs.py  test_site_features.py  test_structure_figures.py  test_uniprot_expand.py
(+4 files in other folders)
