[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-atlas"
version = "0.6.0"
description = "AI-guided redesign of catalytic microenvironments — generative design constrained by mechanistic chemistry"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Snow" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "pyarrow>=14.0",
  "tqdm>=4.66",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6"]
structure = ["biopython>=1.83"]
gpu = [
  # Torch wheels commonly lag NumPy 2; keep <2 for a working Tensor bridge.
  "numpy>=1.24,<3",
  "torch>=2.1",
  "fair-esm>=2.0.0",
  "transformers>=4.38",
]

[project.scripts]
cat-download = "catalyst_atlas.cli:download_main"
cat-sites = "catalyst_atlas.cli:sites_main"
cat-embed = "catalyst_atlas.cli:embed_main"
cat-eval = "catalyst_atlas.cli:eval_main"
cat-search = "catalyst_atlas.cli:search_main"
cat-figures = "catalyst_atlas.cli:figures_main"
cat-enrich = "catalyst_atlas.cli:enrich_main"
cat-cases = "catalyst_atlas.cli:cases_main"
cat-graphs = "catalyst_atlas.cli:graphs_main"
cat-esm = "catalyst_atlas.cli:esm_main"
cat-train-encoder = "catalyst_atlas.cli:train_encoder_main"
cat-design-pockets = "catalyst_atlas.cli:design_pockets_main"
cat-design-generate = "catalyst_atlas.cli:design_generate_main"
cat-design-funnel = "catalyst_atlas.cli:design_funnel_main"
cat-design-score = "catalyst_atlas.cli:design_score_main"
cat-design-run = "catalyst_atlas.cli:design_run_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
catalyst_atlas = ["resources/*.yaml", "resources/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "out", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["catalyst_atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
